--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -1,3 +1,14 @@
-/* 
-    General Styles used on every website (Don't Repeat Yourself)
-*/
+h1 {
+    display: flex;
+    margin-left: 350px;
+}
+
+p {
+    display: flex;
+    margin-left: 350px;
+}
+
+button {
+    display: flex;
+    margin-left: 350px;
+}
